tests/neg/i11637.check
-- [E057] Type Mismatch Error: tests/neg/i11637.scala:11:33 ------------------------------------------------------------
11 |  var h = new HKT3_1[FunctorImpl]();  // error // error
   |                                 ^
   |                 Type argument test2.FunctorImpl does not conform to upper bound [Generic2[T] <: Set[T]] =>> Any

longer explanation available when compiling with `-explain`
-- [E057] Type Mismatch Error: tests/neg/i11637.scala:11:21 ------------------------------------------------------------
11 |  var h = new HKT3_1[FunctorImpl]();  // error // error
   |                     ^
   |                 Type argument test2.FunctorImpl does not conform to upper bound [Generic2[T] <: Set[T]] =>> Any

longer explanation available when compiling with `-explain`
